--- a/zebra/static/zebra/card-form.css
+++ b/zebra/static/zebra/card-form.css
@@ -1,9 +1,12 @@
 #id_card_number {
     width: 15ex;
+    box-sizing: content-box;
 }
 #id_card_cvv {
     width: 3ex;
+    box-sizing: content-box;
 }
 #id_card_expiry_year {
     width: 10ex;
+    box-sizing: content-box;
 }
